--- a/requirements.txt
+++ b/requirements.txt
@@ -12,4 +12,10 @@ pyparsing==2.4.7
 pytest==7.4.0
 pytest-cov==2.11.1
 toml==0.10.2
-Flask==2.0.3
+Flask==2.3.3
+Werkzeug==2.3.7
+Jinja2>=3.1.2
+itsdangerous>=2.1.2
+click>=8.1.3
+blinker>=1.6.2
+
